# elite-talent-capacity-command

./: .gitignore  README.md  index.html  package.json  pyproject.toml  requirements.txt
.github/workflows/: node-checks.yml  python-workforce-checks.yml
configs/: synthetic_workforce_lab.yaml
data/: README.md
docs/: workforce_ethics_policy.md  workforce_intelligence_methodology.md
matlab/: plot_workforce_metrics.m
scripts/: run_synthetic_workforce_lab.py
src/: App.jsx  Dashboard.jsx  Hiring.jsx  Planner.jsx  Reports.jsx  Team.jsx  data.js  engine.js  engine.test.js  styles.css  ui.jsx
src/workforceintel/: __init__.py  analysis.py  audit.py  config.py  fairness.py  learning.py  reporting.py  synthetic.py  visualization.py
tests/: test_workforce_audit.py  test_workforce_pipeline.py  test_workforce_synthetic.py
